# lizard-lang

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: comprehensions.lz  counter.lz  decorators.lz  factorial.lz  fibonacci.lz  hello.lz  multiline_strings.lz  primes.lz
lizard/: __init__.lz  __init__.py  bootstrap.py  cli.lz  cli.py  errors.lz  errors.py  lexer.lz  lexer.py  parser.lz  parser.py  runner.lz  runner.py  tokens.lz  tokens.py  transpiler.lz  transpiler.py
lizard/_bootstrap/: __init__.py  errors.py  lexer.py  parser.py  tokens.py  transpiler.py
lizard/tests/: __init__.lz  runner.lz  test_transpiler.lz
lizard_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_transpiler.py
vscode-extension/lizard-vscode/: language-configuration.json  package.json
vscode-extension/lizard-vscode/syntaxes/: lizard.tmLanguage.json
