[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lizard-lang"
version = "1.0.0"
description = "Lizard is a python-based programming language that adds semicolons and curly braces to Python syntax"
authors = [
  { name = "Kayk Caputo" }
]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = []

keywords = [
  "lizard",
  "programming language",
  "python syntax",
  "interpreter",
  "compiler"
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Interpreters",
  "Topic :: Software Development :: Compilers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/KaykCaputo/lizard-lang"
Repository = "https://github.com/KaykCaputo/lizard-lang.git"
Documentation = "https://github.com/KaykCaputo/lizard-lang#readme"
Issues = "https://github.com/KaykCaputo/lizard-lang/issues"

[project.scripts]
lizard = "lizard.bootstrap:main"

[dependency-groups]
dev = ["mypy", "pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lizard*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
lizard = ["**/*.lz"]
